# rust-2048

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs
gnu-mingw/lib/32/: libSDL2.la  libSDL2_test.la  libSDL2main.la
gnu-mingw/lib/64/: libSDL2.la  libSDL2_test.la  libSDL2main.la
src/: app.rs  board.rs  main.rs  number_renderer.rs  settings.rs  tile.rs
