[package]

name = "rust-2048"
version = "0.0.0"
authors = ["coeuvre <coeuvre@gmail.com>"]

[[bin]]

name = "rust-2048"
path = "src/main.rs"

[dependencies]
rustc-serialize = "0.3"
rand = "0.3.7"

[dependencies.piston_window]
git = "https://github.com/pistondevelopers/piston_window"

[dependencies.piston2d-opengl_graphics]
git = "https://github.com/PistonDevelopers/opengl_graphics.git"

[dependencies.pistoncore-sdl2_window]
git = "https://github.com/pistondevelopers/sdl2_window"

